Rename and refactor Nettoyeur class
Refactor Nettoyeur class to improve naming and logic.